# flb-plugin-sample

./: Dockerfile  README.md  WORKSPACE.bazel
fluentbit/: BUILD.bazel  flb_config.h  flb_filter.h  flb_time.h
plugins/: BUILD.bazel
plugins/filter_hello_world/: BUILD.bazel  hello_world.cc
plugins/filter_stdout_cxx/: BUILD.bazel  stdout_cxx.cc
